# 2practiceC

./: .gitignore  CMakeLists.txt  README.md  binary_search.cpp  fixedArray.cpp  program.cpp  test1.cpp
algo/: CMakeLists.txt  algo.cpp
algo/include/: algo.h
